fixed overflowing details

--- a/assets/assets/css/main.css
+++ b/assets/assets/css/main.css
@@ -202,7 +202,7 @@ body {
 
 #left-column,
 #right-column {
-  display: flex;
+  display: none;
   flex-direction: column;
   flex-shrink: 0;
   white-space: nowrap;
@@ -648,51 +648,51 @@ summary {
     opacity: 0;
     transition:
       opacity 0.4s,
-      max-block-size 0.15s linear,
-      content-visibility 0.15s linear;
+      max-block-size 0.3s linear,
+      content-visibility 0.3s linear;
     transition-behavior: allow-discrete;
     overflow: hidden;
   }
 
   details[open]::details-content {
     opacity: 1;
-    max-block-size: 15em; /* max-block-size has to be hard-coded for the animation to work (unfortunately) */
+    max-block-size: 55em; /* max-block-size has to be hard-coded for the animation to work (unfortunately) */
   }
 
   .animation-medium::details-content {
     transition:
-      opacity 0.4s,
-      max-block-size 0.2s linear,
-      content-visibility 0.2s linear;
-    transition-behavior: allow-discrete;
+      opacity 0.5s,
+      max-block-size 0.4s linear,
+      content-visibility 0.4s linear;
+    transition-behavior: allow-discrete; /* for some reason I have to repeat this rule every time, or else Edge (specifically) misbehaves */
   }
 
   .animation-medium[open]::details-content {
-    max-block-size: 30em;
+    max-block-size: 110em;
   }
 
   .animation-long::details-content {
     transition:
-      opacity 0.4s,
-      max-block-size 0.25s linear,
-      content-visibility 0.25s linear;
+      opacity 0.6s,
+      max-block-size 0.5s linear,
+      content-visibility 0.5s linear;
     transition-behavior: allow-discrete;
   }
 
   .animation-long[open]::details-content {
-    max-block-size: 60em;
+    max-block-size: 165em;
   }
 
   .animation-extra-long::details-content {
     transition:
-      opacity 0.4s,
-      max-block-size 0.3s linear,
-      content-visibility 0.3s linear;
+      opacity 0.7s,
+      max-block-size 0.6s linear,
+      content-visibility 0.6s linear;
     transition-behavior: allow-discrete;
   }
 
   .animation-extra-long[open]::details-content {
-    max-block-size: 100em;
+    max-block-size: 220em;
   }
 }
 
